syntax = "proto3";

package clients.client_types.v1;
option go_package = "clients.client_types.v1;client_types";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service ClientTypeService {
  rpc Create(CreateRequest) returns (ClientType);
  rpc Get(GetRequest) returns (ClientType);
  rpc Update(UpdateRequest) returns (ClientType);
  rpc List(ListRequest) returns (ListResponse);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
  rpc Restore(RestoreRequest) returns (ClientType);
}

message ClientType {
  int32 id = 1;
  string code = 2;
  string name = 3;
  string description = 4;
  bool is_active = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message CreateRequest {
  string code = 1;
  string name = 2;
  optional string description = 3;
  optional bool is_active = 4;
}

message GetRequest {
  int32 id = 1;
}

message DeleteRequest {
  int32 id = 1;
  optional bool permanent = 2;
}

message RestoreRequest {
  int32 id = 1;
}

message UpdateRequest {
  int32 id = 1;
  string code = 2;
  string name = 3;
  string description = 4;
}

message ListRequest {
  int32 page = 1;
  int32 count = 2;
  optional string search = 3;
  optional bool active_only = 4;
}

message ListResponse {
  repeated ClientType client_types = 1;
  int32 total_count = 2;
  int32 current_page = 3;
}
